Correcting some spacing issues for modify and delete buttons in cards

--- a/resources/assets/sass/components/_card.scss
+++ b/resources/assets/sass/components/_card.scss
@@ -17,3 +17,7 @@
   min-width: 0;
   @include mdc-theme-prop(color, text-icon-on-background);
 }
+
+.mdc-card__actions i {
+  line-height: inherit;
+}
